FIX: fix invisible first textfield in dialog form

--- a/frontend/src/Pages/Admin/DialogForm/index.scss
+++ b/frontend/src/Pages/Admin/DialogForm/index.scss
@@ -1,3 +1,8 @@
 .dialog-form {
-  width: 500px;
+  min-width: 500px;
+}
+
+.form-container {
+  box-sizing: border-box;
+  margin-top: 10px;
 }
